--- a/src/css/_profile.scss
+++ b/src/css/_profile.scss
@@ -1,11 +1,10 @@
 @import "./variables";
 
-$profile-img-rad: 180px;
-
 @mixin profile-section {
   border-radius: 8px;
   background-color: white;
   min-height: 40px;
+  margin-bottom: 10px;
 }
 
 #profile {
@@ -90,8 +89,8 @@ $profile-img-rad: 180px;
 }
 
 #profile-posting-header {
-  margin: 10px auto 0 auto;
-  width: 50%;
+  margin: 0 auto 0 auto;
+  width: 100%;
   min-height: 60px;
   background-color: white;
   border-radius: 12px;
