bar|improve profile

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,11 @@
 @import "./css/profile";
 @import "./css/login";
 @import "./css/post";
+@import "./css/mainBar";
+@import "./css/postsProfileSection";
+@import "./css/profileHeader";
+@import "./css/notifications";
+@import "./css/postCommentsSection";
 
 * {
   box-sizing: border-box;
