--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -4,3 +4,10 @@ $primary-color: rgb(40, 50, 75);
 $profile-img-rad: 180px;
 
 $post-profile-photo-rad: 40px;
+
+$notif-container-width: 400px;
+$notif-container-height: 400px;
+
+$post-inner-border: rgba(173, 173, 173, 0.199) solid 1px;
+
+$comment-profile-img-size: 40px;
