--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -7,6 +7,8 @@
 }
 
 .post {
+  position: relative;
+
   @include profile-section;
   width: 100%;
 
@@ -63,5 +65,36 @@
   flex-direction: row;
   Button {
     width: 100%;
+  }
+}
+
+.post-more-div {
+  z-index: 10;
+  position: absolute;
+  right: 0px;
+}
+
+.post-more-options {
+  width: 200%;
+
+  position: relative;
+  top: -30px;
+  left: -122px;
+  background-color: rgb(236, 236, 236);
+
+  padding: 4px 9px;
+  font-size: large;
+  font-weight: bold;
+
+  border: double 2px solid black;
+  border-radius: 12px;
+
+  div {
+    cursor: pointer;
+    border-bottom: 2px solid rgb(255, 255, 255);
+
+    &:hover {
+      background-color: rgb(160, 228, 255);
+    }
   }
 }
