--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -62,10 +62,12 @@
   border-top: $post-inner-border;
 
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   Button {
     width: 100%;
   }
+
+  flex-wrap: wrap;
 }
 
 .post-more-div {
@@ -96,5 +98,31 @@
     &:hover {
       background-color: rgb(160, 228, 255);
     }
+  }
+}
+
+.post-btns {
+  min-width: 300px;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 5;
+}
+
+.post-counters {
+  min-width: 250px;
+  display: flex;
+  flex-direction: row;
+  //border-left: blueviolet solid 2px;
+  justify-content: space-evenly;
+  flex-grow: 2;
+  padding: 8px;
+  background-color: rgba(20, 20, 20, 0.26);
+  div {
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    //font-family: Verdana, Geneva, Tahoma, sans-serif;
+    //font-family: cursive;
+    font-weight: bold;
+    color: rgb(29, 29, 29);
   }
 }
