--- a/src/css/_profileHeader.scss
+++ b/src/css/_profileHeader.scss
@@ -1,4 +1,45 @@
+@import "variables";
+
 #profile-friendship-buttons-div {
   width: max-content;
   margin: 10px auto 0 auto;
+}
+
+#profile-img {
+  position: relative;
+  margin: 0px auto 0px auto;
+  width: $profile-img-rad;
+  height: $profile-img-rad;
+  border: solid rgb(228, 228, 228);
+  background-color: white;
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+
+#upload-profile-img-btn {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  right: 50px;
+  top: 140px;
+  background-color: whitesmoke;
+}
+
+#cancel-upload-profile-img-btn {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  right: 50px;
+  top: 140px;
+}
+
+#confirm-upload-profile-img-btn {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  right: 50px;
+  top: 140px;
 }
