fetching post author profile image

--- a/src/css/_profileHeader.scss
+++ b/src/css/_profileHeader.scss
@@ -10,7 +10,7 @@
   margin: 0px auto 0px auto;
   width: $profile-img-rad;
   height: $profile-img-rad;
-  border: solid rgb(228, 228, 228);
+  border: $profile-img-border-color;
   background-color: white;
   border-radius: 50%;
   flex-shrink: 0;
