--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,7 +3,7 @@ $bg-main: #f2f3f5;
 $primary-color: rgb(40, 50, 75);
 $profile-img-rad: 180px;
 
-$post-profile-photo-rad: 40px;
+$post-profile-photo-rad: 45px;
 
 $notif-container-width: 400px;
 $notif-container-height: 400px;
@@ -11,3 +11,7 @@ $notif-container-height: 400px;
 $post-inner-border: rgba(173, 173, 173, 0.199) solid 1px;
 
 $comment-profile-img-size: 40px;
+
+$wanna-posting-author-profile-img-rad: 50px;
+
+$profile-img-border-color: solid rgb(228, 228, 228);
