--- a/src/css/_profile.scss
+++ b/src/css/_profile.scss
@@ -94,21 +94,25 @@
 }
 
 #profile-posting-header {
-  margin: 0 auto 0 auto;
   width: 100%;
-  min-height: 60px;
+  height: 75px;
+
+  margin: 0 auto 0 auto;
   background-color: white;
   border-radius: 12px;
-  padding: 2% 2%;
+  padding: 10px 2%;
+
+  display: flex;
+  flex-direction: row;
 }
 
 #profile-wanna-posting-textarea {
-  width: 90%;
-  min-height: 40px;
+  width: 85%;
+  height: 50px;
   margin: 0 auto 0 auto;
   background-color: whitesmoke;
   border-radius: 50px;
-  padding: 2% 2%;
+  padding: 12px 2%;
   cursor: pointer;
   &::after {
     content: "What's on your mind?";
@@ -126,4 +130,14 @@
 
   display: flex;
   flex-direction: column;
+}
+
+#wanna-posting-author-profile-img {
+  width: $wanna-posting-author-profile-img-rad + 10;
+  height: $wanna-posting-author-profile-img-rad + 10;
+
+  border: $profile-img-border-color;
+  border-radius: 50%;
+  background-color: whitesmoke;
+  flex-shrink: 0;
 }
