fetching comment author img

--- a/src/css/_postCommentsSection.scss
+++ b/src/css/_postCommentsSection.scss
@@ -42,7 +42,7 @@
   width: $comment-profile-img-size;
   height: $comment-profile-img-size;
   margin: 5px;
-  background-color: rgb(252, 255, 78);
+  background-color: whitesmoke;
   border-radius: 50%;
   flex-shrink: 0;
 }
