update in post & comment view

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,8 +19,9 @@ body {
 
 .clickable-account-name {
   text-decoration: none;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-size: small;
+  font-family: Georgia, Cambria, Cochin, Georgia, Times, "Times New Roman",
+    serif;
   color: black;
   font-weight: bold;
   height: 0px;
