--- a/src/css/_postCommentsSection.scss
+++ b/src/css/_postCommentsSection.scss
@@ -1,7 +1,7 @@
 .post-comments-section {
   width: 100%;
-  //border-top: $post-inner-border;
   padding-top: 6px;
+  margin: 0 0 10px 0;
 }
 
 .post-commenting-section {
@@ -13,7 +13,7 @@
 
 #post-comment-send-btn {
   position: absolute;
-  bottom: 0px;
+  bottom: 7px;
   left: -10px;
 }
 
@@ -28,12 +28,18 @@
   flex-direction: row;
 
   border-bottom: $post-inner-border;
+
+  &:hover {
+    .comment-more-div {
+      display: flex;
+    }
+  }
 }
 
 .comment-author-name {
   width: 80%;
   margin-bottom: 5px;
-  font-size: smaller;
+  font-size: medium;
   font-weight: bold;
   word-break: break-word;
 }
@@ -49,13 +55,28 @@
 
 .comment-content {
   white-space: pre-wrap;
+  word-break: break-word;
+}
+
+.comment-right-col {
+  max-width: 77%;
+  background-color: $post-comment-bg;
+  padding: 8px 12px;
+  border-radius: 18px;
 }
 
 .comment-more-div {
+  max-width: 5%;
   z-index: 10;
-  position: absolute;
-  top: 5px;
-  right: -8px;
+  position: relative;
+  left: 3%;
+  display: none;
+
+  .MuiButton-root {
+    min-width: 0px;
+    position: static;
+    width: 100%;
+  }
 }
 
 .comment-more-options {
