--- a/src/css/_profile.scss
+++ b/src/css/_profile.scss
@@ -1,72 +1,13 @@
 @import "./variables";
 
-@mixin profile-section {
-  border-radius: 8px;
-  background-color: white;
-  min-height: 40px;
-  margin-bottom: 10px;
-}
-
 #profile {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
 }
 
-#profile-header-div {
-  width: 100%;
-  background-color: rgb(255, 255, 255);
-}
-
-#profile-cover-container {
-  margin: 0px auto 0px auto;
-  width: 70%;
-  height: 310px;
-  border-radius: 0px 0px 10px 10px;
-  background: radial-gradient(
-    circle,
-    rgb(157, 152, 255) 5%,
-    rgb(199, 199, 250) 35%,
-    rgb(255, 255, 255) 100%
-  );
-}
-
-#profile-img-container {
-  margin: -120px auto 0px auto;
-  width: $profile-img-rad;
-  height: $profile-img-rad;
-}
-
-#profile-img-frame {
-  width: inherit;
-  height: inherit;
-  background-color: transparent;
-  border-width: 2px;
-  //border: solid rgb(228, 228, 228);
-  border-radius: 50%;
-}
-
-#profile-name-container {
-  width: 70%;
-  margin: 20px auto 0px auto;
-  text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-}
-
-#profile-header-options-container {
-  width: 60%;
-  margin: 40px auto 0px auto;
-  display: flex;
-  justify-content: flex-start;
-  border-top: 1px solid rgba(82, 82, 82, 0.3);
-  Button {
-    height: 50px;
-  }
-}
-
 #profile-two-colums {
-  width: 90%;
+  width: 70%;
   margin: 20px auto 10px auto;
 }
 
@@ -84,8 +25,6 @@
 .profile-posts-section {
   @include profile-section;
 }
-
-//======================== TMP ========================
 
 #profile-posting-section {
   width: 100%;
@@ -140,4 +79,42 @@
   border-radius: 50%;
   background-color: whitesmoke;
   flex-shrink: 0;
+}
+
+/********** Profile Friends Option ***********/
+
+#profile-friends-option-friends-container {
+  @include profile-section;
+  width: 70%;
+  min-height: 400px;
+  margin: 20px auto 50px auto;
+}
+
+.friend-entry {
+  //border: black solid 1px;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  margin: 0 auto 0 auto;
+
+  img {
+    width: $profile-friend-entry-img-rad;
+    height: $profile-friend-entry-img-rad;
+    flex-shrink: 0;
+    background-color: rgb(51, 51, 51);
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+
+  a {
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  #profile-two-colums,
+  #profile-friends-option-friends-container {
+    width: 98%;
+  }
 }
