--- a/src/css/_profile.scss
+++ b/src/css/_profile.scss
@@ -85,29 +85,44 @@
 
 #profile-friends-option-friends-container {
   @include profile-section;
-  width: 70%;
-  min-height: 400px;
+  width: 870px;
+  max-width: 98%;
+  min-height: 40px;
   margin: 20px auto 50px auto;
-}
+  //gap: 5px;
+  padding: 15px 15px;
 
-.friend-entry {
-  //border: black solid 1px;
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  margin: 0 auto 0 auto;
+  .friend-entry {
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 
-  img {
-    width: $profile-friend-entry-img-rad;
-    height: $profile-friend-entry-img-rad;
-    flex-shrink: 0;
-    background-color: rgb(51, 51, 51);
-    border-radius: 50%;
-    margin-right: 10px;
-  }
+    display: inline-block;
+    padding: 20px;
 
-  a {
-    height: auto;
+    .friend-entry-left-col {
+      display: inline-flex;
+      flex-direction: row;
+    }
+
+    img {
+      width: $profile-friend-entry-img-rad;
+      height: $profile-friend-entry-img-rad;
+      flex-shrink: 0;
+      background-color: rgb(51, 51, 51);
+      border-radius: 8px 8px;
+      margin-right: 10px;
+      box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    }
+
+    a {
+      height: auto;
+    }
+
+    .MuiIconButton-root {
+      font-size: small;
+      width: auto;
+      float: right;
+    }
   }
 }
 
