--- a/src/css/_postCommentsSection.scss
+++ b/src/css/_postCommentsSection.scss
@@ -13,7 +13,7 @@
 
 #post-comment-send-btn {
   position: absolute;
-  bottom: 7px;
+  top: -1px;
   left: -10px;
 }
 
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: row;
 
-  border-bottom: $post-inner-border;
+  //border-top: $post-inner-border;
 
   &:hover {
     .comment-more-div {
