update posts and comments sections in profile

--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -38,9 +38,9 @@
   flex-direction: row;
 }
 
-.post-profile-photo {
-  width: $post-profile-photo-rad;
-  height: $post-profile-photo-rad;
+.post-profile-image {
+  width: $post-profile-image-rad;
+  height: $post-profile-image-rad;
 
   margin-right: 5px;
 
