--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -4,7 +4,7 @@ $primary-color: rgb(40, 50, 75);
 $profile-img-rad: 180px;
 $profile-friend-entry-img-rad: 60px;
 
-$post-profile-photo-rad: 45px;
+$post-profile-image-rad: 45px;
 
 $notif-container-width: 400px;
 $notif-container-height: 400px;
