--- a/src/css/_postCommentsSection.scss
+++ b/src/css/_postCommentsSection.scss
@@ -1,12 +1,11 @@
 .post-comments-section {
   width: 100%;
-  padding-top: 6px;
+  padding: 6px 12px 0px 12px;
   margin: 0 0 10px 0;
 }
 
 .post-commenting-section {
   width: 100%;
-
   display: flex;
   flex-direction: row;
 }
