--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import "./css/profileHeader";
 @import "./css/notifications";
 @import "./css/postCommentsSection";
+@import "./css/posting";
 
 * {
   box-sizing: border-box;
@@ -19,9 +20,11 @@ body {
 
 .clickable-account-name {
   text-decoration: none;
-  font-size: small;
-  font-family: Georgia, Cambria, Cochin, Georgia, Times, "Times New Roman",
-    serif;
+  //font-size: smaller;
+  /*font-family: Georgia, Cambria, Cochin, Georgia, Times, "Times New Roman",
+    serif;*/
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: black;
   font-weight: bold;
   height: 0px;
