--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -11,23 +11,41 @@
 
   @include profile-section;
   width: 100%;
-
-  padding: 3% 3% 0 3%;
-
+  padding: 0;
   display: flex;
   flex-direction: column;
-
   justify-content: space-between;
-}
 
-.post-header {
-  width: 100%;
+  .post-header {
+    width: 100%;
+    padding: 12px 16px 0px;
+    display: flex;
+    flex-direction: row;
+    //border-bottom: $post-inner-border;
+    align-items: center;
+  }
 
-  display: flex;
-  flex-direction: row;
+  .post-content {
+    width: 100%;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    margin-bottom: 10px;
 
-  border-bottom: $post-inner-border;
-  align-items: center;
+    .post-content-text {
+      padding: 0px 16px;
+    }
+
+    .post-image-div {
+      width: 100%;
+      padding: 0;
+      margin: 12px 0 0 0;
+      .post-image {
+        width: 100%;
+        margin: 0px;
+        max-height: 600px;
+      }
+    }
+  }
 }
 
 .post-identity-container {
@@ -48,13 +66,6 @@
 
   border-radius: 50%;
   flex-shrink: 0;
-}
-
-.post-content {
-  width: 100%;
-  margin: 15px 0 15px 0;
-  word-wrap: break-word;
-  white-space: pre-wrap;
 }
 
 .post-footer {
@@ -115,7 +126,7 @@
   flex-direction: row;
   justify-content: space-between;
   flex-grow: 2;
-  padding: 8px;
+  padding: 8px 12px;
   div {
     //font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     //  "Lucida Sans", Arial, sans-serif;
@@ -134,5 +145,31 @@
   .post-reaction-counter {
     cursor: pointer;
     float: left;
+  }
+}
+
+/*        Reactants Modal         */
+
+#reactants-modal {
+  overflow: auto;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  #reactants-modal-body {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    outline: none;
+
+    @media screen and (max-width: 768px) {
+      width: 100vw;
+      height: 100vh;
+    }
+
+    #reactants-modal-header {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
   }
 }
