--- a/src/css/_profileHeader.scss
+++ b/src/css/_profileHeader.scss
@@ -3,6 +3,7 @@
 #profile-header-div {
   width: 100%;
   background-color: rgb(255, 255, 255);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 #profile-cover-container {
