post reactants modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,3 +29,9 @@ body {
   font-weight: bold;
   height: 0px;
 }
+
+.clickable-profile-image-anchor {
+  margin-right: 10px;
+  width: min-content;
+  height: min-content;
+}
