--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -25,6 +25,8 @@ $post-img-height: 400px;
 $posting-dialoge-width: 485px;
 $posting-dialoge-heigth: 600px;
 
+$modal-entry-profile-image-size: 60px;
+
 @mixin profile-section {
   border-radius: 8px;
   background-color: white;
