--- a/src/css/_post.scss
+++ b/src/css/_post.scss
@@ -151,17 +151,20 @@
 /*        Reactants Modal         */
 
 #reactants-modal {
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(255, 255, 255, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
 
   #reactants-modal-body {
+    @include profile-section;
     width: 500px;
     height: 500px;
-    background-color: white;
     outline: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     @media screen and (max-width: 768px) {
       width: 100vw;
@@ -169,7 +172,43 @@
     }
 
     #reactants-modal-header {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      display: flex;
+      justify-content: flex-end;
+      width: 100%;
+    }
+
+    #reactants-modal-content {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 87%;
+      //border: solid 1px rgba(0, 0, 0, 0.1);
+      border-radius: 8px 8px;
+      padding: 10px;
+      overflow: auto;
+
+      .reactant-entry {
+        width: 100%;
+        height: 70px;
+        margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+
+        .profile-data {
+          display: inline-flex;
+          flex-direction: row;
+          .profile-image {
+            width: $modal-entry-profile-image-size;
+            height: $modal-entry-profile-image-size;
+            border-radius: 50%;
+            border: 2px solid rgba(0, 0, 0, 0.1);
+            border: 0;
+            padding: -1px;
+          }
+          .profile-name {
+          }
+        }
+      }
     }
   }
 }
