--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,5 +1,7 @@
 $bg-main: #f2f3f5;
+$primary-text: #444950;
 
+$general-section-icon-color: #444950;
 $primary-color: rgb(40, 50, 75);
 $profile-img-rad: 180px;
 $profile-friend-entry-img-rad: 60px;
