--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import "./css/notifications";
 @import "./css/postCommentsSection";
 @import "./css/posting";
+@import "./css/home";
 
 * {
   box-sizing: border-box;
